# folder-stats-tui

./: .gitignore  Cargo.toml  Makefile  readme.md
.github/workflows/: release.yml
assets/: folder-stats-tui.desktop
src/: app.rs  args.rs  event.rs  folder_stats.rs  main.rs  tui.rs  ui.rs  update.rs  walker.rs
