[package]
name = "folder-stats-tui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
bytesize = "1.3.0"
clap = { version = "4.4.11", features = ["derive"] }
crossterm = "0.27.0"
flexi_logger = "0.27.3"
ignore = "0.4.21"
log = "0.4.20"
ratatui = "0.24.0"
