[package]
name = "folder-stats-tui"
version = "0.1.0"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
bytesize = "1.3"
clap = { version = "4.4", features = ["derive"] }
crossterm = "0.27"
flexi_logger = "0.28"
ignore = "0.4"
log = "0.4"
ratatui = "0.26"
